Update documentation links to use docs.html

--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                     <ul>
                         <li><a href="#features" class="nav-link">Features</a></li>
                         <li><a href="#demo" class="nav-link">Demo</a></li>
-                        <li><a href="/docs" class="nav-link">Documentation</a></li>
+                        <li><a href="/docs.html.html" class="nav-link">Documentation</a></li>
                         <li><a href="#cta" class="nav-link">Get Started</a></li>
                     </ul>
                 </nav>
@@ -674,7 +674,7 @@
                     Fast, scalable, and easy to integrate.
                 </p>
                 <div class="hero-buttons">
-                    <a href="/docs" class="btn btn-primary">
+                    <a href="/docs.html" class="btn btn-primary">
                         <i class="fas fa-book"></i>
                         View Documentation
                     </a>
@@ -758,7 +758,7 @@
                         Get instant screenshots with just one API call.
                     </p>
                     <div class="hero-buttons">
-                        <a href="/docs" class="btn btn-primary">
+                        <a href="/docs.html" class="btn btn-primary">
                             <i class="fas fa-book"></i>
                             Full Documentation
                         </a>
@@ -821,11 +821,11 @@
                 Start building amazing applications today.
             </p>
             <div class="cta-buttons">
-                <a href="/docs" class="btn btn-primary">
+                <a href="/docs.html" class="btn btn-primary">
                     <i class="fas fa-rocket"></i>
                     Get Started Free
                 </a>
-                <a href="/docs#endpoints" class="btn btn-secondary">
+                <a href="/docs.html#endpoints" class="btn btn-secondary">
                     <i class="fas fa-code"></i>
                     View API Reference
                 </a>
@@ -857,10 +857,10 @@
                 <div class="footer-section">
                     <h4>Product</h4>
                     <ul>
-                        <li><a href="/docs">Documentation</a></li>
-                        <li><a href="/docs#examples">Examples</a></li>
-                        <li><a href="/docs#status">API Status</a></li>
-                        <li><a href="/docs#logs">Developer Logs</a></li>
+                        <li><a href="/docs.html">Documentation</a></li>
+                        <li><a href="/docs.html#examples">Examples</a></li>
+                        <li><a href="/docs.html#status">API Status</a></li>
+                        <li><a href="/docs.html#logs">Developer Logs</a></li>
                     </ul>
                 </div>
                 
