--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                     <ul>
                         <li><a href="#features" class="nav-link">Features</a></li>
                         <li><a href="#demo" class="nav-link">Demo</a></li>
-                        <li><a href="/docs.html.html" class="nav-link">Documentation</a></li>
+                        <li><a href="/docs.html" class="nav-link">Documentation</a></li>
                         <li><a href="#cta" class="nav-link">Get Started</a></li>
                     </ul>
                 </nav>
